--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: tubes_dart
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+repository: https://github.com/go-tubes/tubes-dart
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: ">=2.16.2 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
